# roscar

./: .gitignore  320_wheels_with_viewer.launch  README.md  cam.launch  test_wheels.launch  wheels.launch  wheels_debug.launch  wheels_with_viewer.launch
doc/: components.graphml  roscar_system.graphml
doc/ROS Overview/: Topic_Service.graphml  mater_package_node_overview.graphml  service.graphml  topic.graphml
doc/roscar design/: Houghtransform.graphml  finding contour.graphml
src/: CMakeLists.txt
src/picamera/: CMakeLists.txt  package.xml
src/shared/IOWrapper/: ImageDisplay.h  InputImageStream.h  NotifyBuffer.h  Output3DWrapper.h  Timestamp.cpp  Timestamp.h  TimestampedObject.h
src/shared/IOWrapper/OpenCV/: ImageDisplay_OpenCV.cpp
src/shared/IOWrapper/ROS/: ROSImageStreamThread.cpp  ROSImageStreamThread.h  ROSOutput3DWrapper.cpp  ROSOutput3DWrapper.h  rosReconfigure.h
src/wheels/: CMakeLists.txt  package.xml
src/wheels/action/: set_car_direction_speed.action
src/wheels/include/: GRANSAC.hpp  Undistorter.h  arucomarkernavigator.h  clanedetectornavigatorengine.h  claneinfo.h  clinefollowernavigatorengine.h  clinefollowernavigatorengine2.h  clinefollowernavigatorengine3.h  cnavigatorenginebase.h  cnavigatorengineimplementationbase.h  globalinc.h  myutil.h  wheelcontroller.h  wheeldriver.h  wheelmotorengine.h  wheelnavigator.h  wheels_aruco_tracking.h  wheelstatusconsole.h
src/wheels/msg/: navigator_engine_status.msg  wheels_status.msg
src/wheels/src/: arucomarker_navigator.cpp  cameranavigator.cpp  clanedetectornavigatorengine.cpp  clinefollowernavigatorengine.cpp  clinefollowernavigatorengine2.cpp  clinefollowernavigatorengine3.cpp  cnavigatorenginebase.cpp  myutil.cpp  wheelcontroller.cpp  wheelcontrollernode.cpp  wheeldriver.cpp  wheeldrivernode.cpp  wheelmanualconsole.cpp  wheelmotorengine.cpp  wheelnavigator.cpp  wheelnavigatornode.cpp  wheels_aruco_tracking.cpp  wheelstatusconsole.cpp  wheelstatusconsolenode.cpp
src/wheels/src/test/: testlanedetector.cpp  testlanedetector2.cpp  testlinefollower.cpp  testlinefollower2.cpp
src/wheels/srv/: cmd_ask_navigator_saveimage.srv  cmd_get_navigator_engine_status.srv  cmd_get_one_wheel_status.srv  cmd_send_manual_instruction.srv  cmd_set_car_direction_speed.srv  cmd_set_car_two_wheels_direction_speed.srv  cmd_set_navigator_engine.srv
